fixed instructions sitting on game board using javascript to make the html jump around to suit the games needs

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ img.wall {
   border: 1px solid black;
   width: 300px;
   height: auto;
-  position: fixed;
+  margin-right: 20px ;
   background-color: #d7d7d7;
   background-image: url(https://www.transparenttextures.com/patterns/brushed-alum-dark.png);
   font-size: 12px;
